# Live_Dashboard

./: .gitmodules  LICENSE  build.bash  config.bash  connection_protocol
.clangd/index/: AppSettings.cpp.BDD2867A1DA01028.idx  AppSettings.h.2FFF4B6537395C75.idx  CommonTypes.h.2C29529CF0808D71.idx  LiveDashboard.cpp.E6848E6F17E514DA.idx  LiveDashboard.h.D16E36CB47762B74.idx  MainWindow.cpp.80E550D538DDC32C.idx  MainWindow.h.B33D28132A44B788.idx  NetworkManager.h.305AAC2A173DF110.idx  OutputManager.cpp.6744232E668ECFBD.idx  OutputManager.h.4844F84FE30EDDC0.idx  main.cpp.B8F107D48B98F753.idx
src/: CMakeLists.txt
src/app_logic/: CMakeLists.txt
src/app_logic/inc/: AppSettings.h  CommonTypes.h  LiveDashboard.h  NetworkManager.h
src/app_logic/src/: AppSettings.cpp  LiveDashboard.cpp
src/interface_gui/: CMakeLists.txt
src/interface_gui/inc/: GuiNetworkManager.h  MainWindow.h  MainWindow.ui
src/interface_gui/src/: MainWindow.cpp  main.cpp
